--- a/public/css/style.css
+++ b/public/css/style.css
@@ -570,8 +570,15 @@ video {
 	margin-left: auto;
 	margin-right: auto;
 }
+.my-1 {
+	margin-top: 0.25rem;
+	margin-bottom: 0.25rem;
+}
 .flex {
 	display: flex;
+}
+.h-64 {
+	height: 16rem;
 }
 .h-\[100\%\] {
 	height: 100%;
@@ -579,20 +586,11 @@ video {
 .h-96 {
 	height: 24rem;
 }
-.h-64 {
-	height: 16rem;
-}
-.max-h-96 {
-	max-height: 24rem;
-}
 .w-screen {
 	width: 100vw;
 }
 .w-\[100\%\] {
 	width: 100%;
-}
-.w-1\/4 {
-	width: 25%;
 }
 .w-auto {
 	width: auto;
@@ -606,31 +604,17 @@ video {
 .justify-center {
 	justify-content: center;
 }
-.bg-yellow-200 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(253, 230, 138, var(--tw-bg-opacity));
-}
 .bg-black {
 	--tw-bg-opacity: 1;
 	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
-}
-.bg-red-200 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(254, 202, 202, var(--tw-bg-opacity));
-}
-.bg-red-500 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(239, 68, 68, var(--tw-bg-opacity));
 }
 .bg-green-200 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(167, 243, 208, var(--tw-bg-opacity));
 }
-@media (min-width: 640px) {
-
-	.sm\:flex-col {
-		flex-direction: column;
-	}
+.bg-gray-800 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
 }
 @media (min-width: 768px) {
 
@@ -652,10 +636,5 @@ video {
 
 	.md\:flex-row {
 		flex-direction: row;
-	}
-
-	.md\:bg-green-600 {
-		--tw-bg-opacity: 1;
-		background-color: rgba(5, 150, 105, var(--tw-bg-opacity));
 	}
 }
