--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.topic-list:nth-child(odd){
+    @apply bg-gray-50;
+}
+.topic-list:nth-child(even){
+    @apply bg-gray-100;
+}
