--- a/public/css/style.css
+++ b/public/css/style.css
@@ -638,11 +638,12 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(167, 243, 208, var(--tw-bg-opacity));
 }
-.p-5{
-	padding: 1.25rem;
-}
 .p-3{
 	padding: 0.75rem;
+}
+.py-4{
+	padding-top: 1rem;
+	padding-bottom: 1rem;
 }
 .text-center{
 	text-align: center;
@@ -654,16 +655,12 @@ video {
 	font-size: 2.25rem;
 	line-height: 2.5rem;
 }
-.text-xs{
-	font-size: 0.75rem;
-	line-height: 1rem;
-}
 .text-base{
 	font-size: 1rem;
 	line-height: 1.5rem;
 }
-.font-semibold{
-	font-weight: 600;
+.font-medium{
+	font-weight: 500;
 }
 .text-white{
 	--tw-text-opacity: 1;
@@ -706,5 +703,24 @@ video {
 
 	.md\:flex-row{
 		flex-direction: row;
+	}
+
+	.md\:py-5{
+		padding-top: 1.25rem;
+		padding-bottom: 1.25rem;
+	}
+
+	.md\:text-4xl{
+		font-size: 2.25rem;
+		line-height: 2.5rem;
+	}
+
+	.md\:text-xs{
+		font-size: 0.75rem;
+		line-height: 1rem;
+	}
+
+	.md\:font-semibold{
+		font-weight: 600;
 	}
 }
