--- a/views/chapterTopic.ejs
+++ b/views/chapterTopic.ejs
@@ -7,15 +7,17 @@
     <body class="font-inter">
         <div class="flex flex-col md:flex-row justify-center">
             <div class="w-screen md:w-3/4 h-64 md:h-auto md:max-h-[80vh] bg-black">
-                <iframe class="w-[100%] max-w-screen-lg h-[100%] mx-auto" src="https://www.youtube.com/embed/1l3yILJxsfI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="w-[100%] max-w-screen-lg h-[100%] mx-auto" src="<%=topicYoutubeLink%>" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="w-auto md:w-1/4 flex flex-col justify-center">
                 <div class="bg-gray-700 text-4xl md:text-4xl py-4 md:py-5 text-white text-center font-medium md:font-semibold">Next Topics</div>
-                <% bmeJsonData.forEach(element=> { %>
+                <% bmeJsonData.forEach((element,index)=> { %>
+                <% if(chapterName==element.chapter.replace(/ /g, '-')){ %>
                 <div class="text-base md:text-xs p-3 topic-list text-gray-700 flex flex-row justify-start">
                     <div class="mr-1.5 relative bottom-0.5"><i class="fa fa-chevron-circle-right text-base text-gray-400"></i></div>
-                    <a href="/chapter/topic/<%=element.id%>"> <%=element.title%></a>
+                    <a href="/topic/<%=element.id%>"><%=index+1%>. <%=element.title%></a>
                 </div>
+                <% } %>
                 <% }) %>
             </div>
         </div>
