--- a/public/css/style.css
+++ b/public/css/style.css
@@ -631,6 +631,9 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
 }
+.p-6{
+	padding: 1.5rem;
+}
 .p-3{
 	padding: 0.75rem;
 }
@@ -644,6 +647,10 @@ video {
 .font-inter{
 	font-family: Inter;
 }
+.text-xl{
+	font-size: 1.25rem;
+	line-height: 1.75rem;
+}
 .text-4xl{
 	font-size: 2.25rem;
 	line-height: 2.5rem;
@@ -651,6 +658,9 @@ video {
 .text-base{
 	font-size: 1rem;
 	line-height: 1.5rem;
+}
+.font-semibold{
+	font-weight: 600;
 }
 .font-medium{
 	font-weight: 500;
