--- a/views/chapterTopic.ejs
+++ b/views/chapterTopic.ejs
@@ -8,6 +8,9 @@
         <div class="flex flex-col md:flex-row justify-center">
             <div class="w-screen md:w-3/4 h-64 md:h-auto md:max-h-[80vh] bg-black">
                 <iframe class="w-[100%] max-w-screen-lg h-[100%] mx-auto" src="<%=topicYoutubeLink%>" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <div class="p-6">
+                    <h1 class="text-xl font-semibold"><%= topicTitle %> from <%= chapterName %></h1>
+                </div>
             </div>
             <div class="w-auto md:w-1/4 flex flex-col justify-center">
                 <div class="bg-gray-700 text-4xl md:text-4xl py-4 md:py-5 text-white text-center font-medium md:font-semibold">Next Topics</div>
@@ -15,7 +18,7 @@
                 <% if(chapterName==element.chapter.replace(/ /g, '-')){ %>
                 <div class="text-base md:text-xs p-3 topic-list text-gray-700 flex flex-row justify-start">
                     <div class="mr-1.5 relative bottom-0.5"><i class="fa fa-chevron-circle-right text-base text-gray-400"></i></div>
-                    <a href="/topic/<%=element.id%>"><%=index+1%>. <%=element.title%></a>
+                    <a href="/<%=chapterName%>/<%=element.id%>"><%=index+1%>. <%=element.title%></a>
                 </div>
                 <% } %>
                 <% }) %>
