--- a/public/css/style.css
+++ b/public/css/style.css
@@ -571,6 +571,14 @@ video {
 [hidden] {
   display: none;
 }
+
+*, ::before, ::after{
+	--tw-border-opacity: 1;
+	border-color: rgba(229, 231, 235, var(--tw-border-opacity));
+	--tw-ring-offset-shadow: 0 0 #0000;
+	--tw-ring-shadow: 0 0 #0000;
+	--tw-shadow: 0 0 #0000;
+}
 .relative{
 	position: relative;
 }
@@ -579,6 +587,9 @@ video {
 }
 .bottom-0{
 	bottom: 0px;
+}
+.m-3{
+	margin: 0.75rem;
 }
 .mx-auto{
 	margin-left: auto;
@@ -617,11 +628,34 @@ video {
 .flex-col{
 	flex-direction: column;
 }
+.flex-wrap{
+	flex-wrap: wrap;
+}
+.items-center{
+	align-items: center;
+}
 .justify-start{
 	justify-content: flex-start;
 }
 .justify-center{
 	justify-content: center;
+}
+.rounded-sm{
+	border-radius: 0.125rem;
+}
+.border-l-4{
+	border-left-width: 4px;
+}
+.border-solid{
+	border-style: solid;
+}
+.border-indigo-500{
+	--tw-border-opacity: 1;
+	border-color: rgba(99, 102, 241, var(--tw-border-opacity));
+}
+.bg-gray-100{
+	--tw-bg-opacity: 1;
+	background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
 }
 .bg-black{
 	--tw-bg-opacity: 1;
@@ -631,15 +665,34 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
 }
+.bg-indigo-200{
+	--tw-bg-opacity: 1;
+	background-color: rgba(199, 210, 254, var(--tw-bg-opacity));
+}
 .p-6{
 	padding: 1.5rem;
 }
 .p-3{
 	padding: 0.75rem;
 }
+.p-7{
+	padding: 1.75rem;
+}
 .py-4{
 	padding-top: 1rem;
 	padding-bottom: 1rem;
+}
+.px-5{
+	padding-left: 1.25rem;
+	padding-right: 1.25rem;
+}
+.px-4{
+	padding-left: 1rem;
+	padding-right: 1rem;
+}
+.py-3{
+	padding-top: 0.75rem;
+	padding-bottom: 0.75rem;
 }
 .text-center{
 	text-align: center;
@@ -665,6 +718,10 @@ video {
 .font-medium{
 	font-weight: 500;
 }
+.text-gray-800{
+	--tw-text-opacity: 1;
+	color: rgba(31, 41, 55, var(--tw-text-opacity));
+}
 .text-white{
 	--tw-text-opacity: 1;
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
@@ -677,6 +734,9 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(156, 163, 175, var(--tw-text-opacity));
 }
+.duration-300{
+	transition-duration: 300ms;
+}
 
 .topic-list:nth-child(odd){
 	--tw-bg-opacity: 1;
@@ -686,6 +746,10 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
 }
+.hover\:shadow-md:hover{
+	--tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
 @media (min-width: 768px){
 
 	.md\:h-auto{
@@ -694,6 +758,10 @@ video {
 
 	.md\:max-h-\[80vh\]{
 		max-height: 80vh;
+	}
+
+	.md\:max-h-screen{
+		max-height: 100vh;
 	}
 
 	.md\:w-3\/4{
@@ -706,6 +774,10 @@ video {
 
 	.md\:flex-row{
 		flex-direction: row;
+	}
+
+	.md\:overflow-y-scroll{
+		overflow-y: scroll;
 	}
 
 	.md\:py-5{
