--- a/views/chapterTopic.ejs
+++ b/views/chapterTopic.ejs
@@ -4,14 +4,16 @@
         <%- include('./partials/head.ejs');%>
         <title>BME</title>
     </head>
-    <body class="font-inter">
+    <body class="font-inter bg-gray-100">
         <div class="flex flex-col md:flex-row justify-center">
             <div class="w-screen md:w-3/4 h-64 md:h-auto md:max-h-[80vh] bg-black">
                 <iframe class="w-[100%] max-w-screen-lg h-[100%] mx-auto" src="<%=topicYoutubeLink%>" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <div class="p-6">
-                    <h1 class="text-xl font-semibold"><%= topicTitle %> from <%= chapterName %></h1>
+                    <h1 class="text-xl text-gray-800 font-semibold"><%= topicTitle %> from <%= chapterName %></h1>
+                    <%- include('./partials/chapters.ejs');%>
                 </div>
             </div>
+            <!-- <div class="w-auto md:w-1/4 flex flex-col justify-center md:max-h-screen md:overflow-y-scroll"> -->
             <div class="w-auto md:w-1/4 flex flex-col justify-center">
                 <div class="bg-gray-700 text-4xl md:text-4xl py-4 md:py-5 text-white text-center font-medium md:font-semibold">Next Topics</div>
                 <% bmeJsonData.forEach((element,index)=> { %>
