--- a/public/css/style.css
+++ b/public/css/style.css
@@ -595,6 +595,12 @@ video {
 	margin-left: auto;
 	margin-right: auto;
 }
+.mt-1{
+	margin-top: 0.25rem;
+}
+.mt-3{
+	margin-top: 0.75rem;
+}
 .mr-1\.5{
 	margin-right: 0.375rem;
 }
@@ -614,6 +620,9 @@ video {
 	width: 100vw;
 }
 .w-\[100\%\]{
+	width: 100%;
+}
+.w-full{
 	width: 100%;
 }
 .w-auto{
@@ -653,17 +662,17 @@ video {
 	--tw-border-opacity: 1;
 	border-color: rgba(99, 102, 241, var(--tw-border-opacity));
 }
-.bg-gray-100{
-	--tw-bg-opacity: 1;
-	background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
-}
 .bg-black{
 	--tw-bg-opacity: 1;
 	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
 }
-.bg-gray-700{
+.bg-indigo-100{
 	--tw-bg-opacity: 1;
-	background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
+	background-color: rgba(224, 231, 255, var(--tw-bg-opacity));
+}
+.bg-indigo-500{
+	--tw-bg-opacity: 1;
+	background-color: rgba(99, 102, 241, var(--tw-bg-opacity));
 }
 .bg-indigo-200{
 	--tw-bg-opacity: 1;
@@ -678,6 +687,10 @@ video {
 .p-7{
 	padding: 1.75rem;
 }
+.py-3{
+	padding-top: 0.75rem;
+	padding-bottom: 0.75rem;
+}
 .py-4{
 	padding-top: 1rem;
 	padding-bottom: 1rem;
@@ -690,10 +703,6 @@ video {
 	padding-left: 1rem;
 	padding-right: 1rem;
 }
-.py-3{
-	padding-top: 0.75rem;
-	padding-bottom: 0.75rem;
-}
 .text-center{
 	text-align: center;
 }
@@ -704,9 +713,9 @@ video {
 	font-size: 1.25rem;
 	line-height: 1.75rem;
 }
-.text-4xl{
-	font-size: 2.25rem;
-	line-height: 2.5rem;
+.text-3xl{
+	font-size: 1.875rem;
+	line-height: 2.25rem;
 }
 .text-base{
 	font-size: 1rem;
@@ -721,6 +730,10 @@ video {
 .text-gray-800{
 	--tw-text-opacity: 1;
 	color: rgba(31, 41, 55, var(--tw-text-opacity));
+}
+.text-gray-200{
+	--tw-text-opacity: 1;
+	color: rgba(229, 231, 235, var(--tw-text-opacity));
 }
 .text-white{
 	--tw-text-opacity: 1;
@@ -785,9 +798,9 @@ video {
 		padding-bottom: 1.25rem;
 	}
 
-	.md\:text-4xl{
-		font-size: 2.25rem;
-		line-height: 2.5rem;
+	.md\:text-3xl{
+		font-size: 1.875rem;
+		line-height: 2.25rem;
 	}
 
 	.md\:text-xs{
