--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta name="title" content="Basic Mechanical Engineering" />
+        <meta name="description" content="" />
+        <meta name="keywords" content="mechanical,engineering,niraj chavda" />
+        <meta name="robots" content="index, follow" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta name="language" content="English" />
+        <meta name="revisit-after" content="10 days" />
+        <meta name="author" content="Abhi Dadhaniya, Niraj Chavda" />
         <%- include('./partials/head.ejs');%>
-        <title>MAIN PAGE Index</title>
+        <title>Mechanical Engineering</title>
     </head>
     <body class="font-inter">
         <%- include('./partials/chapters.ejs');%>
