--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,4 +6,4 @@
 <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="/css/style.css">
-<link rel="shortcut icon" href="img/fav-icon.png" type="image/x-icon" />
+<link rel="shortcut icon" href="/img/fav-icon.png" type="image/x-icon" />
