fixed some json data bugs and make all design responsive

--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -4,9 +4,13 @@
 @tailwind components;
 @tailwind utilities;
 
+html{
+    -webkit-tap-highlight-color: rgba(176, 159, 159, 0);
+}
+
 .topic-list:nth-child(odd){
-    @apply bg-gray-50;
+    @apply bg-indigo-50;
 }
 .topic-list:nth-child(even){
-    @apply bg-gray-100;
+    @apply bg-indigo-100;
 }
