--- a/public/css/style.css
+++ b/public/css/style.css
@@ -598,23 +598,23 @@ video {
 .mt-1{
 	margin-top: 0.25rem;
 }
-.mt-3{
-	margin-top: 0.75rem;
-}
 .mr-1\.5{
 	margin-right: 0.375rem;
 }
 .mr-1{
 	margin-right: 0.25rem;
 }
+.mt-3{
+	margin-top: 0.75rem;
+}
 .flex{
 	display: flex;
 }
+.\!hidden{
+	display: none !important;
+}
 .h-64{
 	height: 16rem;
-}
-.h-\[100\%\]{
-	height: 100%;
 }
 .w-screen{
 	width: 100vw;
@@ -727,9 +727,9 @@ video {
 .font-medium{
 	font-weight: 500;
 }
-.text-gray-800{
+.text-gray-700{
 	--tw-text-opacity: 1;
-	color: rgba(31, 41, 55, var(--tw-text-opacity));
+	color: rgba(55, 65, 81, var(--tw-text-opacity));
 }
 .text-gray-200{
 	--tw-text-opacity: 1;
@@ -739,10 +739,6 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
-.text-gray-700{
-	--tw-text-opacity: 1;
-	color: rgba(55, 65, 81, var(--tw-text-opacity));
-}
 .text-gray-400{
 	--tw-text-opacity: 1;
 	color: rgba(156, 163, 175, var(--tw-text-opacity));
@@ -751,13 +747,17 @@ video {
 	transition-duration: 300ms;
 }
 
+html{
+    -webkit-tap-highlight-color: rgba(176, 159, 159, 0);
+}
+
 .topic-list:nth-child(odd){
 	--tw-bg-opacity: 1;
-	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
+	background-color: rgba(238, 242, 255, var(--tw-bg-opacity));
 }
 .topic-list:nth-child(even){
 	--tw-bg-opacity: 1;
-	background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
+	background-color: rgba(224, 231, 255, var(--tw-bg-opacity));
 }
 .hover\:shadow-md:hover{
 	--tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
@@ -765,8 +765,20 @@ video {
 }
 @media (min-width: 768px){
 
+	.md\:\!flex{
+		display: flex !important;
+	}
+
+	.md\:\!hidden{
+		display: none !important;
+	}
+
 	.md\:h-auto{
 		height: auto;
+	}
+
+	.md\:h-\[100\%\]{
+		height: 100%;
 	}
 
 	.md\:max-h-\[80vh\]{
@@ -796,6 +808,11 @@ video {
 	.md\:py-5{
 		padding-top: 1.25rem;
 		padding-bottom: 1.25rem;
+	}
+
+	.md\:text-2xl{
+		font-size: 1.5rem;
+		line-height: 2rem;
 	}
 
 	.md\:text-3xl{
