--- a/views/chapterTopic.ejs
+++ b/views/chapterTopic.ejs
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <%- include('./partials/metaData.ejs');%>
-        <%- include('./partials/head.ejs');%>
+        <%- include('./partials/metaData.ejs');%> <%- include('./partials/head.ejs');%>
         <title><%=topicName%> || Mechanical Engineering</title>
     </head>
     <body class="font-inter">
         <div class="flex flex-col md:flex-row justify-center">
-            <div class="w-screen md:w-3/4 h-64 md:h-auto md:max-h-[80vh] bg-black">
-                <iframe class="w-[100%] max-w-screen-lg h-[100%] mx-auto" src="<%=topicYoutubeLink%>" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="w-screen md:w-3/4 md:h-auto md:max-h-[80vh] bg-black">
+                <iframe class="w-[100%] h-64 max-w-screen-lg md:h-[100%] mx-auto" src="<%=topicYoutubeLink%>" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <div class="bg-indigo-100">
-                    <h1 class="p-6 text-xl text-gray-800 font-semibold"><%= topicTitle %> from <%= chapterName %></h1>
-                    <div class="mt-1 flex flex-col justify-center items-center bg-indigo-100">
-                        <h1 class="mt-3 font-medium text-3xl py-3 w-full text-center text-gray-200 bg-indigo-500">Chapters</h1>
+                    <h1 class="p-6 text-xl md:text-2xl text-gray-700 font-semibold"><%= topicTitle %> from <%= chapterName %></h1>
+                    <div class="!hidden mt-1 md:!flex flex-col justify-center items-center bg-indigo-100">
+                        <h1 class="font-medium text-3xl py-3 w-full text-center text-gray-200 bg-indigo-500">Chapters</h1>
                         <%- include('./partials/chapters.ejs');%>
                     </div>
                 </div>
@@ -20,15 +19,17 @@
             <!-- <div class="w-auto md:w-1/4 flex flex-col justify-center md:max-h-screen md:overflow-y-scroll"> -->
             <div class="w-auto md:w-1/4 flex flex-col justify-center">
                 <div class="bg-indigo-500 text-3xl md:text-3xl py-4 md:py-5 text-white text-center font-medium md:font-semibold">Next Topics</div>
-                <% bmeJsonData.forEach((element,index)=> { %>
-                <% if(chapterName==element.chapter.replace(/ /g, '-')){ %>
+                <% bmeJsonData.forEach((element,index)=> { %> <% if(chapterName==element.chapter.replace(/ /g, '-')){ %>
                 <div class="text-base md:text-xs p-3 topic-list text-gray-700 flex flex-row justify-start">
                     <div class="mr-1.5 relative bottom-0.5"><i class="fa fa-chevron-circle-right text-base text-gray-400"></i></div>
                     <a href="/<%=chapterName%>/<%=element.id%>"><%=index+1%>. <%=element.title%></a>
                 </div>
-                <% } %>
-                <% }) %>
+                <% } %> <% }) %>
             </div>
+        </div>
+        <div class="md:!hidden mt-1 flex flex-col justify-center items-center bg-indigo-100">
+            <h1 class="font-medium text-3xl py-3 w-full text-center text-gray-200 bg-indigo-500">Chapters</h1>
+            <%- include('./partials/chapters.ejs');%>
         </div>
     </body>
 </html>
