--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -6,6 +6,13 @@
 
 html{
     -webkit-tap-highlight-color: rgba(176, 159, 159, 0);
+    scroll-behavior: smooth;
+}
+.section-bg{
+    @apply min-h-screen;
+    background: linear-gradient(rgba(49, 46, 129, 0.49),rgba(0, 0, 0, 0.646)),url(/img/4.jpg);
+    background-size: cover;
+    /* background-position: center; */
 }
 
 .topic-list:nth-child(odd){
