--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,51 @@
         <title>Mechanical Engineering</title>
     </head>
     <body class="font-inter">
-        <%- include('./partials/chapters.ejs');%>
+        
+        <!-- navBar -->
+
+        <header class="absolute top-0 z-50 w-full nav-shadow duration-200">
+            <div class="container flex flex-col justify-between md:justify-between py-4 md:py-2 items-center w-screen mx-auto">
+                <div class="flex flex-row justify-around items-center w-screen md:px-12">
+                    <div class="px-2 md:px-0">
+                        <img class="text-xl w-40 border-4 rounded-sm border-solid border-white flex title-font font-medium items-center text-gray-900 md:mb-0" src="/img/logo/tsb.png" />
+                    </div>
+                    <nav class="z-20 interFont absolute w-screen md:top-0 -top-52 md:w-auto md:relative duration-300 md:pb-0 md:mx-auto hidden md:flex md:flex-row flex-col items-center text-base justify-center text-gray-100 bg-indigo-500 md:bg-transparent">
+                        <a href="/" class="nav-link my-1.5 text-gray-100 text-xl mr-5 hover:text-indigo-400 duration-200">Home</a>
+                        <a href="https://www.web-developer-abhi.tk" class="nav-link my-1.5 text-gray-100 text-xl mr-5 hover:text-indigo-400 duration-200">Developer</a>
+                        <a href="#chapter" class="nav-link my-1.5 text-gray-100 text-xl mr-5 hover:text-indigo-400 duration-200">Chapters</a>
+                    </nav>
+                    <div class="flex flex-row justify-center items-center px-2 md:px-0">
+                        <button id="navBtn" class="block md:hidden text-white text-2xl border-solid border-2 border-l-2 border-white rounded px-3 py-1.5 mr-4 duration-300 hover:text-orange hover:bg-white"><i class="fa fa-bars"></i></button>
+                    </div>
+                </div>
+                <div class="navDiv h-0 duration-300">
+                    <nav id="navBar" class="pt-4 md:hidden z-20 interFont w-screen opacity-0 md:top-0 -top-52 md:w-auto md:relative duration-300 md:pb-0 md:mx-auto hidden md:flex-row flex-col items-center text-base justify-center text-gray-100">
+                        <a href="/" class="relative left-0 links-animate nav-link my-1.5 text-gray-100 text-xl mr-5 hover:text-gray-200 duration-300">Home</a>
+                        <a href="https://web-developer-abhi.tk" class="relative left-0 links-animate nav-link my-1.5 text-gray-100 text-xl mr-5 hover:text-gray-200 duration-300">Developer</a>
+                        <a href="#chapter" class="relative left-0 links-animate nav-link my-1.5 text-gray-100 text-xl mr-5 hover:text-gray-200 duration-300">Chapters</a>
+                    </nav>
+                </div>
+            </div>
+        </header>
+        
+
+        <section class="section-bg flex flex-col justify-center items-center">
+            <h1 class="text-6xl font-semibold text-white text-center">Mechanical <br> Engineering</h1>
+            <h2 class="text-xl text-gray-300 mt-4">-Professor Nirajsir Chavda</h2>
+            <a href="#chapters" class="mt-8 px-2 py-3 duration-200 rounded-md border-2 text-white border-white font-medium text-xl hover:text-indigo-700 hover:bg-white">Start Learning >></a>            
+        </section>
+        <section id="faculty" class="bg-gray-50 py-8">
+            <h1 class="font-medium text-3xl w-full text-center text-indigo-700">About Faculty</h1>
+            <div class="flex flex-row justify-center items-center px-24 py-5">
+                <img src="/img/fav-icon.png" class="w-20" alt="niraj chavda">
+                <p class="my-6 md:my-0 md:mx-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quibusdam eius animi odit nam? Perferendis magnam quaerat esse facilis labore, dolore blanditiis tempora nesciunt totam laboriosam sint. Non, cupiditate nostrum!</p>
+            </div>
+        </section>
+        <section id="chapters" class="bg-indigo-50">
+            <h1 class="font-medium text-3xl py-3 w-full text-center text-indigo-700">Chapters</h1>
+            <%- include('./partials/chapters.ejs');%>
+        </section>
+        <%#- include('./partials/footer.ejs');%>
     </body>
 </html>
