--- a/public/css/style.css
+++ b/public/css/style.css
@@ -709,8 +709,8 @@ video {
 .w-auto{
 	width: auto;
 }
-.w-40{
-	width: 10rem;
+.w-28{
+	width: 7rem;
 }
 .w-20{
 	width: 5rem;
@@ -733,6 +733,9 @@ video {
 .justify-start{
 	justify-content: flex-start;
 }
+.justify-end{
+	justify-content: flex-end;
+}
 .justify-center{
 	justify-content: center;
 }
@@ -742,17 +745,14 @@ video {
 .justify-around{
 	justify-content: space-around;
 }
-.rounded-sm{
-	border-radius: 0.125rem;
-}
 .rounded{
 	border-radius: 0.25rem;
 }
 .rounded-md{
 	border-radius: 0.375rem;
 }
-.border-4{
-	border-width: 4px;
+.rounded-sm{
+	border-radius: 0.125rem;
 }
 .border-2{
 	border-width: 2px;
@@ -786,6 +786,14 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(99, 102, 241, var(--tw-bg-opacity));
 }
+.bg-gray-900{
+	--tw-bg-opacity: 1;
+	background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
+}
+.bg-white{
+	--tw-bg-opacity: 1;
+	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+}
 .bg-gray-50{
 	--tw-bg-opacity: 1;
 	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
@@ -814,6 +822,14 @@ video {
 .py-4{
 	padding-top: 1rem;
 	padding-bottom: 1rem;
+}
+.py-0\.5{
+	padding-top: 0.125rem;
+	padding-bottom: 0.125rem;
+}
+.py-0{
+	padding-top: 0px;
+	padding-bottom: 0px;
 }
 .px-2{
 	padding-left: 0.5rem;
@@ -880,6 +896,10 @@ video {
 	font-size: 3.75rem;
 	line-height: 1;
 }
+.text-lg{
+	font-size: 1.125rem;
+	line-height: 1.75rem;
+}
 .font-semibold{
 	font-weight: 600;
 }
@@ -921,6 +941,10 @@ video {
 .opacity-0{
 	opacity: 0;
 }
+.shadow{
+	--tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
 .duration-200{
 	transition-duration: 200ms;
 }
@@ -934,9 +958,10 @@ html{
 }
 .section-bg{
 	min-height: 100vh;
-    background: linear-gradient(rgba(49, 46, 129, 0.49),rgba(0, 0, 0, 0.646)),url(/img/4.jpg);
+    background: linear-gradient(rgba(49, 46, 129, 0.49),rgba(0, 0, 0, 0.802)),url(/img/4.jpg);
     background-size: cover;
-    /* background-position: center; */
+    background-attachment: fixed;
+    background-position: center;
 }
 
 .topic-list:nth-child(odd){
@@ -947,9 +972,85 @@ html{
 	--tw-bg-opacity: 1;
 	background-color: rgba(224, 231, 255, var(--tw-bg-opacity));
 }
-.hover\:bg-white:hover{
-	--tw-bg-opacity: 1;
-	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+
+
+.navbar-active{
+    /* top: 6rem !important; */
+    padding-bottom: 9rem;
+    opacity: 1;
+}
+.links-active{
+	display: flex;
+	opacity: 1;
+}
+.show-links{
+	opacity: 1;
+}
+.links-animate{
+    -webkit-animation-name: links;
+            animation-name: links;
+    -webkit-animation-duration: 0.4s;
+            animation-duration: 0.4s;
+    -webkit-animation-timing-function: ease;
+            animation-timing-function: ease;
+    -webkit-animation-direction: alternate;
+            animation-direction: alternate;
+    -webkit-animation-fill-mode: forwards;
+            animation-fill-mode: forwards;
+    /* animation-iteration-count:initial; */
+    opacity: 0;
+}
+.links-animate:nth-child(1){
+    -webkit-animation-delay: 0.1s;
+            animation-delay: 0.1s;
+}
+.links-animate:nth-child(2){
+    -webkit-animation-delay: 0.2s;
+            animation-delay: 0.2s;
+}
+.links-animate:nth-child(3){
+    -webkit-animation-delay: 0.3s;
+            animation-delay: 0.3s;
+}
+.links-animate:nth-child(4){
+    -webkit-animation-delay: 0.4s;
+            animation-delay: 0.4s;
+}
+@-webkit-keyframes links{
+    0%{
+		left: -2.5rem;
+	}
+    0%{
+		opacity: 0;
+	}
+    100%{
+		left: 0px;
+	}
+    100%{
+		opacity: 1;
+	}
+}
+@keyframes links{
+    0%{
+		left: -2.5rem;
+	}
+    0%{
+		opacity: 0;
+	}
+    100%{
+		left: 0px;
+	}
+    100%{
+		opacity: 1;
+	}
+}
+.hover\:border-indigo-400:hover{
+	--tw-border-opacity: 1;
+	border-color: rgba(129, 140, 248, var(--tw-border-opacity));
+}
+.hover\:text-indigo-500:hover{
+	--tw-text-opacity: 1;
+	color: rgba(99, 102, 241, var(--tw-text-opacity));
 }
 .hover\:text-indigo-400:hover{
 	--tw-text-opacity: 1;
@@ -958,10 +1059,6 @@ html{
 .hover\:text-gray-200:hover{
 	--tw-text-opacity: 1;
 	color: rgba(229, 231, 235, var(--tw-text-opacity));
-}
-.hover\:text-indigo-700:hover{
-	--tw-text-opacity: 1;
-	color: rgba(67, 56, 202, var(--tw-text-opacity));
 }
 .hover\:shadow-md:hover{
 	--tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
@@ -1078,6 +1175,10 @@ html{
 
 	.md\:pb-0{
 		padding-bottom: 0px;
+	}
+
+	.md\:text-left{
+		text-align: left;
 	}
 
 	.md\:text-2xl{
