--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -10,9 +10,10 @@ html{
 }
 .section-bg{
     @apply min-h-screen;
-    background: linear-gradient(rgba(49, 46, 129, 0.49),rgba(0, 0, 0, 0.646)),url(/img/4.jpg);
+    background: linear-gradient(rgba(49, 46, 129, 0.49),rgba(0, 0, 0, 0.802)),url(/img/4.jpg);
     background-size: cover;
-    /* background-position: center; */
+    background-attachment: fixed;
+    background-position: center;
 }
 
 .topic-list:nth-child(odd){
@@ -20,4 +21,45 @@ html{
 }
 .topic-list:nth-child(even){
     @apply bg-indigo-100;
+}
+
+
+.navbar-active{
+    /* top: 6rem !important; */
+    @apply pb-36 opacity-100;
+}
+.links-active{
+    @apply flex opacity-100;
+}
+.show-links{
+    @apply opacity-100;
+}
+.links-animate{
+    animation-name: links;
+    animation-duration: 0.4s;
+    animation-timing-function: ease;
+    animation-direction: alternate;
+    animation-fill-mode: forwards;
+    /* animation-iteration-count:initial; */
+    opacity: 0;
+}
+.links-animate:nth-child(1){
+    animation-delay: 0.1s;
+}
+.links-animate:nth-child(2){
+    animation-delay: 0.2s;
+}
+.links-animate:nth-child(3){
+    animation-delay: 0.3s;
+}
+.links-animate:nth-child(4){
+    animation-delay: 0.4s;
+}
+@keyframes links{
+    0%{
+        @apply -left-10 opacity-0;
+    }
+    100%{
+        @apply left-0 opacity-100;
+    }
 }
