--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,24 +1,37 @@
-<header class="bg-indigo-500 absolute top-0 z-50 w-full nav-shadow duration-200">
-    <div class="container flex flex-col justify-between md:justify-between py-4 md:py-2 items-center w-screen mx-auto">
-        <div class="flex flex-row justify-around items-center w-screen md:px-12">
+<header class="relative bg-gray-900 top-0 w-full duration-200">
+    <div class="container flex flex-col justify-between md:justify-between py-4 md:py-2 items-center w-full mx-auto">
+        <div class="flex flex-row justify-around items-center w-full md:px-12">
             <div class="px-2 md:px-0">
-                <img class="text-xl w-40 border-4 rounded-sm border-solid border-white flex title-font font-medium items-center text-gray-900 md:mb-0" src="/img/logo/tsb.png" />
+                <a href="/">
+                    <img class="text-xl w-28 flex title-font font-medium items-center text-gray-900 md:mb-0" src="/img/bme_logo.png" />
+                </a>
             </div>
-            <nav class="z-20 interFont absolute w-screen md:top-0 -top-52 md:w-auto md:relative duration-300 md:pb-0 md:mx-auto hidden md:flex md:flex-row flex-col items-center text-base justify-center text-gray-100 bg-indigo-500 md:bg-transparent">
-                <a href="/" class="nav-link my-1.5 text-gray-100 text-xl mr-5 hover:text-gray-200 duration-200">Home</a>
-                <a href="https://www.web-developer-abhi.tk" class="nav-link my-1.5 text-gray-100 text-xl mr-5 hover:text-gray-200 duration-200">Developer</a>
-                <a href="#chapter" class="nav-link my-1.5 text-gray-100 text-xl mr-5 hover:text-gray-200 duration-200">Chapters</a>
+            <nav class="z-20 interFont absolute w-full md:top-0 -top-52 md:relative duration-300 md:pb-0 md:mx-auto hidden md:flex md:flex-row flex-col items-center text-base justify-end text-gray-100 bg-indigo-500 md:bg-transparent">
+                <a href="/" class="nav-link my-1.5 text-gray-100 text-xl mr-5 hover:text-indigo-500 duration-200">Home</a>
+                <a href="https://www.web-developer-abhi.tk" class="nav-link my-1.5 text-gray-100 text-xl mr-5 hover:text-indigo-500 duration-200">Developer</a>
+                <a href="#chapter" class="nav-link my-1.5 text-gray-100 text-xl mr-5 hover:text-indigo-500 duration-200">Chapters</a>
             </nav>
             <div class="flex flex-row justify-center items-center px-2 md:px-0">
-                <button id="navBtn" class="block md:hidden text-white text-2xl border-solid border-2 border-l-2 border-white rounded px-3 py-1.5 mr-4 duration-300 hover:text-orange hover:bg-white"><i class="fa fa-bars"></i></button>
+                <button id="navBtn" class="block md:hidden text-white text-2xl border-solid border-2 border-l-2 border-white rounded px-3 py-1.5 mr-4 duration-300 hover:text-indigo-400 hover:border-indigo-400"><i class="fa fa-bars"></i></button>
             </div>
         </div>
         <div class="navDiv h-0 duration-300">
             <nav id="navBar" class="pt-4 md:hidden z-20 interFont w-screen opacity-0 md:top-0 -top-52 md:w-auto md:relative duration-300 md:pb-0 md:mx-auto hidden md:flex-row flex-col items-center text-base justify-center text-gray-100">
                 <a href="/" class="relative left-0 links-animate nav-link my-1.5 text-gray-100 text-xl mr-5 hover:text-gray-200 duration-300">Home</a>
-                <a href="https://web-developer-abhi.tk" class="relative left-0 links-animate nav-link my-1.5 text-gray-100 text-xl mr-5 hover:text-gray-200 duration-300">Developer</a>
+                <a href="https://www.web-developer-abhi.tk" class="relative left-0 links-animate nav-link my-1.5 text-gray-100 text-xl mr-5 hover:text-gray-200 duration-300">Developer</a>
                 <a href="#chapter" class="relative left-0 links-animate nav-link my-1.5 text-gray-100 text-xl mr-5 hover:text-gray-200 duration-300">Chapters</a>
             </nav>
         </div>
     </div>
 </header>
+
+<script>
+    console.log('linked');
+    const navBtn = document.getElementById("navBtn");
+
+    navBtn.addEventListener("click", () => {
+        document.querySelector(".navDiv").classList.toggle("navbar-active");
+        document.getElementById("navBar").classList.toggle("links-active");
+        document.querySelectorAll(".nav-link").classList.toggle("show-links");
+    });
+</script>
