--- a/views/chapterTopic.ejs
+++ b/views/chapterTopic.ejs
@@ -28,7 +28,7 @@
                 <% } %> <% }) %>
             </div>
         </div>
-        <div class="md:!hidden mt-1 flex flex-col justify-center items-center bg-indigo-100">
+        <div id="chapter" class="md:!hidden mt-1 flex flex-col justify-center items-center bg-indigo-100">
             <h1 class="font-medium text-3xl py-3 w-full text-center text-gray-200 bg-indigo-500">Chapters</h1>
             <%- include('./partials/chapters.ejs');%>
         </div>
