fix font-size and meta data

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="language" content="English" />
         <meta name="revisit-after" content="10 days" />
-        <meta name="author" content="Abhi Dadhaniya, neeraj Chavda" />
+        <meta name="author" content="Abhi Dadhaniya, Neeraj Chavda" />
         <%- include('./partials/head.ejs');%>
         <title>Mechanical Engineering</title>
     </head>
@@ -45,7 +45,7 @@
 
         <section class="section-bg flex flex-col justify-center items-center">
             <h1 class="text-6xl font-semibold text-white text-center">Basic Mechanical <br> Engineering</h1>
-            <h2 class="text-lg text-gray-300 mt-4">-Dr. Neeraj k. Chavda</h2>
+            <h2 class="text-xl text-gray-300 mt-4">-Dr. Neeraj k. Chavda</h2>
             <h2 class="text-base text-gray-400 mt-1">Associate Professor, MBIT Collage</h2>
             <a href="#chapters" class="mt-8 px-2 py-3 duration-200 rounded-md border-2 border-white font-medium text-xl text-indigo-700 bg-white">Start Learning >></a>            
         </section>
