--- a/views/partials/metaData.ejs
+++ b/views/partials/metaData.ejs
@@ -5,4 +5,4 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="language" content="English">
 <meta name="revisit-after" content="10 days">
-<meta name="author" content="Abhi Dadhaniya, Niraj Chavda">
+<meta name="author" content="Abhi Dadhaniya, Neeraj Chavda">
