--- a/views/chapterTopic.ejs
+++ b/views/chapterTopic.ejs
@@ -11,7 +11,7 @@
                 <iframe class="w-[100%] h-64 max-w-screen-lg md:h-[100%] mx-auto" src="<%=topicYoutubeLink%>" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <div class="bg-indigo-100">
                     <h1 class="p-6 text-xl md:text-2xl text-gray-700 font-semibold"><%= topicTitle %> from <%= chapterName %></h1>
-                    <div class="!hidden mt-1 md:!flex flex-col justify-center items-center bg-indigo-100">
+                    <div id="chapter" class="!hidden mt-1 md:!flex flex-col justify-center items-center bg-indigo-100">
                         <h1 class="font-medium text-3xl py-3 w-full text-center text-gray-200 bg-indigo-500">Chapters</h1>
                         <%- include('./partials/chapters.ejs');%>
                     </div>
