--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,3 @@
-<section id="footer" class="py-8 flex flex-row justify-center">
-    
+<section id="footer" class="text-lg py-2.5 md:px-0 px-7 bg-indigo-700 text-indigo-200 text-center">
+    Copyright &#169; 2021 || Created with &#10084; by <a class="text-gray-100 mb-1" href="https://www.github.com/abhidadhaniya23" target="_blank"> &nbsp; Abhi Dadhaniya <i class="text-2xl fa fa-github"></i></a>
 </section>
