--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -8,8 +8,9 @@
             </div>
             <nav class="z-20 interFont absolute w-full md:top-0 -top-52 md:relative duration-300 md:pb-0 md:mx-auto hidden md:flex md:flex-row flex-col items-center text-base justify-end text-gray-100 bg-indigo-500 md:bg-transparent">
                 <a href="/" class="nav-link my-1.5 text-gray-100 text-xl mr-5 hover:text-indigo-500 duration-200">Home</a>
-                <a href="https://www.web-developer-abhi.tk" class="nav-link my-1.5 text-gray-100 text-xl mr-5 hover:text-indigo-500 duration-200">Developer</a>
+                <a href="https://www.web-developer-abhi.tk" target="_blank" class="nav-link my-1.5 text-gray-100 text-xl mr-5 hover:text-indigo-500 duration-200">Developer</a>
                 <a href="#chapter" class="nav-link my-1.5 text-gray-100 text-xl mr-5 hover:text-indigo-500 duration-200">Chapters</a>
+                <a href="https://www.github.com/abhidadhaniya23" target="_blank" class="nav-link my-1.5 text-gray-100 text-xl mr-5 hover:text-indigo-500 duration-200">Github <i class="text-2xl fa fa-github"></i></a>
             </nav>
             <div class="flex flex-row justify-center items-center px-2 md:px-0">
                 <button id="navBtn" class="block md:hidden text-white text-2xl border-solid border-2 border-l-2 border-white rounded px-3 py-1.5 mr-4 duration-300 hover:text-indigo-400 hover:border-indigo-400"><i class="fa fa-bars"></i></button>
@@ -18,15 +19,16 @@
         <div class="navDiv h-0 duration-300">
             <nav id="navBar" class="pt-4 md:hidden z-20 interFont w-screen opacity-0 md:top-0 -top-52 md:w-auto md:relative duration-300 md:pb-0 md:mx-auto hidden md:flex-row flex-col items-center text-base justify-center text-gray-100">
                 <a href="/" class="relative left-0 links-animate nav-link my-1.5 text-gray-100 text-xl mr-5 hover:text-gray-200 duration-300">Home</a>
-                <a href="https://www.web-developer-abhi.tk" class="relative left-0 links-animate nav-link my-1.5 text-gray-100 text-xl mr-5 hover:text-gray-200 duration-300">Developer</a>
+                <a href="https://www.web-developer-abhi.tk" target="_blank" class="relative left-0 links-animate nav-link my-1.5 text-gray-100 text-xl mr-5 hover:text-gray-200 duration-300">Developer</a>
                 <a href="#chapter" class="relative left-0 links-animate nav-link my-1.5 text-gray-100 text-xl mr-5 hover:text-gray-200 duration-300">Chapters</a>
+                <a href="https://www.github.com/abhidadhaniya23" target="_blank" class="relative left-0 links-animate nav-link my-1.5 text-gray-100 text-xl mr-5 hover:text-gray-200 duration-300">Github <i class="text-2xl fa fa-github"></i></a>
             </nav>
         </div>
     </div>
 </header>
 
 <script>
-    console.log('linked');
+    // console.log('linked');
     const navBtn = document.getElementById("navBtn");
 
     navBtn.addEventListener("click", () => {
