--- a/public/css/style.css
+++ b/public/css/style.css
@@ -639,8 +639,8 @@ video {
 .z-20{
 	z-index: 20;
 }
-.m-3{
-	margin: 0.75rem;
+.m-2{
+	margin: 0.5rem;
 }
 .mx-auto{
 	margin-left: auto;
@@ -679,6 +679,9 @@ video {
 .mt-8{
 	margin-top: 2rem;
 }
+.mb-1{
+	margin-bottom: 0.25rem;
+}
 .block{
 	display: block;
 }
@@ -711,9 +714,6 @@ video {
 }
 .w-28{
 	width: 7rem;
-}
-.w-20{
-	width: 5rem;
 }
 .max-w-screen-lg{
 	max-width: 1024px;
@@ -750,6 +750,9 @@ video {
 }
 .rounded-md{
 	border-radius: 0.375rem;
+}
+.rounded-full{
+	border-radius: 9999px;
 }
 .rounded-sm{
 	border-radius: 0.125rem;
@@ -806,14 +809,15 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(199, 210, 254, var(--tw-bg-opacity));
 }
+.bg-indigo-700{
+	--tw-bg-opacity: 1;
+	background-color: rgba(67, 56, 202, var(--tw-bg-opacity));
+}
 .p-6{
 	padding: 1.5rem;
 }
 .p-3{
 	padding: 0.75rem;
-}
-.p-7{
-	padding: 1.75rem;
 }
 .py-3{
 	padding-top: 0.75rem;
@@ -851,21 +855,33 @@ video {
 	padding-top: 2rem;
 	padding-bottom: 2rem;
 }
-.px-24{
-	padding-left: 6rem;
-	padding-right: 6rem;
+.px-4{
+	padding-left: 1rem;
+	padding-right: 1rem;
 }
 .py-5{
 	padding-top: 1.25rem;
 	padding-bottom: 1.25rem;
 }
+.py-7{
+	padding-top: 1.75rem;
+	padding-bottom: 1.75rem;
+}
 .px-5{
 	padding-left: 1.25rem;
 	padding-right: 1.25rem;
 }
-.px-4{
-	padding-left: 1rem;
-	padding-right: 1rem;
+.py-2\.5{
+	padding-top: 0.625rem;
+	padding-bottom: 0.625rem;
+}
+.px-7{
+	padding-left: 1.75rem;
+	padding-right: 1.75rem;
+}
+.py-2{
+	padding-top: 0.5rem;
+	padding-bottom: 0.5rem;
 }
 .pt-4{
 	padding-top: 1rem;
@@ -938,12 +954,16 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(67, 56, 202, var(--tw-text-opacity));
 }
+.text-gray-800{
+	--tw-text-opacity: 1;
+	color: rgba(31, 41, 55, var(--tw-text-opacity));
+}
+.text-indigo-200{
+	--tw-text-opacity: 1;
+	color: rgba(199, 210, 254, var(--tw-text-opacity));
+}
 .opacity-0{
 	opacity: 0;
-}
-.shadow{
-	--tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
-	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .duration-200{
 	transition-duration: 200ms;
@@ -976,7 +996,7 @@ html{
 
 .navbar-active{
     /* top: 6rem !important; */
-    padding-bottom: 9rem;
+    padding-bottom: 11rem;
     opacity: 1;
 }
 .links-active{
@@ -1044,6 +1064,33 @@ html{
 		opacity: 1;
 	}
 }
+
+
+/* scroll bar */
+/* width */
+::-webkit-scrollbar {
+	height: 5px;
+  	width: 7px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+  border-radius: 500px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #080b2e2e;
+  border-radius: 500px;
+  -webkit-transition: 0.4s ease;
+  transition: 0.4s ease;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #7a7f9c;
+}
 .hover\:border-indigo-400:hover{
 	--tw-border-opacity: 1;
 	border-color: rgba(129, 140, 248, var(--tw-border-opacity));
@@ -1072,6 +1119,14 @@ html{
 
 	.md\:top-0{
 		top: 0px;
+	}
+
+	.md\:m-2\.5{
+		margin: 0.625rem;
+	}
+
+	.md\:m-2{
+		margin: 0.5rem;
 	}
 
 	.md\:mx-auto{
@@ -1171,6 +1226,16 @@ html{
 	.md\:px-0{
 		padding-left: 0px;
 		padding-right: 0px;
+	}
+
+	.md\:px-24{
+		padding-left: 6rem;
+		padding-right: 6rem;
+	}
+
+	.md\:py-6{
+		padding-top: 1.5rem;
+		padding-bottom: 1.5rem;
 	}
 
 	.md\:pb-0{
