--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,8 +25,9 @@
                     </div>
                     <nav class="z-20 interFont absolute w-full md:top-0 -top-52 md:relative duration-300 md:pb-0 md:mx-auto hidden md:flex md:flex-row flex-col items-center text-base justify-end text-gray-100 bg-indigo-500 md:bg-transparent">
                         <a href="/" class="nav-link my-1.5 text-gray-100 text-xl mr-5 hover:text-indigo-500 duration-200">Home</a>
-                        <a href="https://www.web-developer-abhi.tk" class="nav-link my-1.5 text-gray-100 text-xl mr-5 hover:text-indigo-500 duration-200">Developer</a>
+                        <a href="https://www.web-developer-abhi.tk" target="_blank" class="nav-link my-1.5 text-gray-100 text-xl mr-5 hover:text-indigo-500 duration-200">Developer</a>
                         <a href="#chapters" class="nav-link my-1.5 text-gray-100 text-xl mr-5 hover:text-indigo-500 duration-200">Chapters</a>
+                        <a href="https://www.github.com/abhidadhaniya23" target="_blank" class="nav-link my-1.5 text-gray-100 text-xl mr-5 hover:text-indigo-500 duration-200">Github <i class="text-2xl fa fa-github"></i></a>
                     </nav>
                     <div class="flex flex-row justify-center items-center px-2 md:px-0">
                         <button id="navBtn" class="block md:hidden text-white text-2xl border-solid border-2 border-l-2 border-white rounded px-3 py-1.5 mr-4 duration-300 hover:text-indigo-400 hover:border-indigo-400"><i class="fa fa-bars"></i></button>
@@ -35,8 +36,9 @@
                 <div class="navDiv h-0 duration-300">
                     <nav id="navBar" class="pt-4 md:hidden z-20 interFont w-screen opacity-0 md:top-0 -top-52 md:w-auto md:relative duration-300 md:pb-0 md:mx-auto hidden md:flex-row flex-col items-center text-base justify-center text-gray-100">
                         <a href="/" class="relative left-0 links-animate nav-link my-1.5 text-gray-100 text-xl mr-5 hover:text-gray-200 duration-300">Home</a>
-                        <a href="https://www.web-developer-abhi.tk" class="relative left-0 links-animate nav-link my-1.5 text-gray-100 text-xl mr-5 hover:text-gray-200 duration-300">Developer</a>
+                        <a href="https://www.web-developer-abhi.tk" target="_blank" class="relative left-0 links-animate nav-link my-1.5 text-gray-100 text-xl mr-5 hover:text-gray-200 duration-300">Developer</a>
                         <a href="#chapters" class="relative left-0 links-animate nav-link my-1.5 text-gray-100 text-xl mr-5 hover:text-gray-200 duration-300">Chapters</a>
+                        <a href="https://www.github.com/abhidadhaniya23" target="_blank" class="relative left-0 links-animate nav-link my-1.5 text-gray-100 text-xl mr-5 hover:text-gray-200 duration-300">Github <i class="text-2xl fa fa-github"></i></a>
                     </nav>
                 </div>
             </div>
@@ -47,22 +49,23 @@
             <h1 class="text-6xl font-semibold text-white text-center">Basic Mechanical <br> Engineering</h1>
             <h2 class="text-xl text-gray-300 mt-4">-Dr. Neeraj k. Chavda</h2>
             <h2 class="text-base text-gray-400 mt-1">Associate Professor, MBIT Collage</h2>
-            <a href="#chapters" class="mt-8 px-2 py-3 duration-200 rounded-md border-2 border-white font-medium text-xl text-indigo-700 bg-white">Start Learning >></a>            
+            <a href="#chapters" class="mt-8 px-2 py-1.5 duration-200 rounded-md border-2 border-white font-medium text-lg text-indigo-700 bg-white">Start Learning >></a>            
         </section>
         <section id="faculty" class="bg-gray-50 py-8">
             <h1 class="font-medium text-3xl w-full text-center text-indigo-700">About Faculty</h1>
-            <div class="flex flex-col text-center md:text-left md:flex-row justify-center items-center px-24 py-5">
-                <img src="/img/fav-icon.png" class="w-20" alt="neeraj chavda">
-                <p class="my-6 md:my-0 md:mx-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quibusdam eius animi odit nam? Perferendis magnam quaerat esse facilis labore, dolore blanditiis tempora nesciunt totam laboriosam sint. Non, cupiditate nostrum!</p>
+            <div class="flex flex-col text-center md:text-left md:flex-row justify-center items-center px-4 md:px-24 py-5">
+                <img src="/img/neerajsir_pic.jpeg" class="w-28 rounded-full" alt="Neeraj Chavda">
+                <p class="my-6 md:my-0 md:mx-5 text-lg text-gray-800">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quibusdam eius animi odit nam? Perferendis magnam quaerat esse facilis labore, dolore blanditiis tempora nesciunt totam laboriosam sint. Non, cupiditate nostrum!</p>
             </div>
         </section>
-        <section id="chapters" class="bg-indigo-50">
-            <h1 class="font-medium text-3xl py-3 w-full text-center text-indigo-700">Chapters</h1>
+        <section id="chapters" class="bg-indigo-50 py-7 md:py-6">
+            <h1 class="font-medium text-3xl w-full text-center text-indigo-700">Chapters</h1>
             <%- include('./partials/chapters.ejs');%>
         </section>
+        <%- include('./partials/footer.ejs');%>
         
         <script>
-            console.log('linked');
+            // console.log('linked'); target="_blank"
             const navBtn = document.getElementById("navBtn");
         
             navBtn.addEventListener("click", () => {
