added meta keywords and descriptions

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <meta name="title" content="Basic Mechanical Engineering" />
-        <meta name="description" content="" />
-        <meta name="keywords" content="mechanical,engineering,neeraj chavda" />
+        <meta name="description" content="The website contains the chapter wise and topic wise videos for the all the chapters of the subject Basic Mechanical Engineering." />
+        <meta name="keywords" content="mechanical,engineering,neeraj chavda, mechanical engineeringmechanical engineering jobs,mechanical engineering jobs ahmedabad,mechanical engineering jobs surat,mechanical engineering salary,mechanical engineering jobs in gujarat,mechanical engineering colleges in ahmedabad,mechanical engineering jobs in ahmedabad for fresher,mechanical engineering subjects,mechanical engineering aptitude,mechanical engineering apprentice training 2021,mechanical engineering after 12th commerce,mechanical engineering admission 2021,mechanical engineering after 10th,mechanical engineering apprenticeship 2021,mechanical engineering applications,mechanical engineering all subjects list,mechanical engineering books,mechanical engineering books pdf,mechanical engineering branches,mechanical engineering blog,mechanical engineering basic knowledge,mechanical engineering background,mechanical engineering career" />
         <meta name="robots" content="index, follow" />
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="language" content="English" />
@@ -49,7 +49,7 @@
             <h1 class="text-6xl font-semibold text-white text-center">Basic Mechanical <br> Engineering</h1>
             <h2 class="text-xl text-gray-300 mt-4">-Dr. Neeraj k. Chavda</h2>
             <h2 class="text-base text-gray-400 mt-1">Associate Professor, MBIT Collage</h2>
-            <a href="#chapters" class="mt-8 px-2 py-1.5 duration-200 rounded-md border-2 border-white font-medium text-lg text-indigo-700 bg-white">Start Learning >></a>            
+            <a href="#chapters" class="mt-8 px-2 py-1.5 duration-200 rounded-md border-2 border-white font-medium text-lg text-indigo-700 bg-white">Start E-Learning >></a>            
         </section>
         <section id="faculty" class="bg-gray-50 py-8">
             <h1 class="font-medium text-3xl w-full text-center text-indigo-700">About Faculty</h1>
